# SH_GR_LIB

./: .gitignore  CMakeLists.txt  README.md  SH_GR_LIB.sln  SH_GR_LIB.vcxproj  SH_GR_LIB.vcxproj.filters  main.cpp
libs/sh_graphics/: CMakeLists.txt  handle.cpp  handle.hpp  renderable.cpp  renderable.hpp  shwin.cpp  shwin.hpp
libs/sh_graphics/painting/: drawable.cpp  drawable.hpp  drawable.tpp  paintives.cpp  paintives.hpp  paintives.tpp  pixmap.hpp  uint8_t.cpp  uint8_t.hpp  uint8_t3.cpp  uint8_t3.hpp  uint_t3.cpp  uint_t3.hpp
libs/sh_graphics/renderables/: meta_renderable.cpp  meta_renderable.hpp  winapi_renderable.cpp  winapi_renderable.hpp
sh_win/: handle.cpp  handle.h  shwin.cpp  shwin.h
